--- a/gb/19/6/24/n11342282.md
+++ b/gb/19/6/24/n11342282.md
@@ -1,53 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dfh2/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/dfh2/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/dfh2/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/dfh2/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>¹ã¶«Ã¯ÃûÕþÐ­Ö÷Ï¯»ÆÐÄÇ¿ÄçÍö ËÀÒò´ýÈ·¶¨</h2>
-
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/dsc2569/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/dsc2569/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/dsc2569/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å¹¿ä¸œèŒ‚åæ”¿åä¸»å¸­é»„å¿ƒå¼ºæººäº¡ æ­»å› å¾…ç¡®å®š</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/download-6-1-320x200.jpg" />
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê06ÔÂ24ÈÕÑ¶¡¿ÈÕÇ°£¬¹ã¶«Ã¯ÃûÊÐÕþÐ­Ö÷Ï¯¡¢µ³×éÊé¼Ç<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E9%BB%84%E5%BF%83%E5%BC%BA.md">»ÆÐÄÇ¿</a>£¨60Ëê£©ÄçË®ÉíÍö¡£</p>
-<p>6ÔÂ21ÈÕÉÏÎç7Ê±30·Ö£¬Ò»¾ßÄÐÐÔÊ¬ÌåÔÚÕ¿½­³à¿²º£±ß±»·¢ÏÖ¡£µ±µØ¹Ù·½Ö¤ÊµËÀÕßÊÇ<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E9%BB%84%E5%BF%83%E5%BC%BA.md">»ÆÐÄÇ¿</a>¡£</p>
-<p>6ÔÂ24ÈÕ£¬Õ¿½­ÊÐÕþ¸®Ïà¹Ø¸ºÔðÈË¶ÔºìÐÇÐÂÎÅ±íÊ¾£¬Ä¿Ç°£¬¾¯·½ÕýÔÚ¶Ô»ÆÐÄÇ¿ËÀÍöÒ»ÊÂ×÷½øÒ»²½µ÷²é£¬¡°ÏÂÒ»²½»¹Òª½øÐÐÊ¬¼ìÖ®ÀàµÄ£¬ÊÇ·ñÏµ×ÔÉ±£¬Ä¿Ç°½áÂÛ»¹Ã»ÓÐÍêÈ«³öÀ´¡£¡±</p>
-<p>Ã¯ÃûÊÐÕþÐ­Ïà¹Ø¸ºÔðÈËÒà³Æ£¬»ÆÐÄÇ¿µÄÄçÍöÊÇ·ñÊô×ÔÉ±£¬Ä¿Ç°ÈÔÎ´¶¨ÐÔ£¬ÎÞ·¨×÷³ö»Ø´ð¡£</p>
-<p>½üÄêÀ´£¬<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%98%E5%91%98.md">ÖÐ¹²¹ÙÔ±</a>¡°<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E9%9D%9E%E6%AD%A3%E5%B8%B8%E6%AD%BB%E4%BA%A1.md">·ÇÕý³£ËÀÍö</a>¡±µÄÏÖÏóÆµ±»ÆØ¹â£¬ËûÃÇ×ÔÉ±µÄ·½Ê½Ò²¶àÖÖ¶àÑù£ºÌøÂ¥¡¢¸îÍó¡¢ÉÏµõ¡¢ÄçË®¡¢·þ¶¾£¬ÎÔ¹ì¡¢¿ªÇ¹¡­¡­µÈ¡£</p>
-<p>¹«¿ª×ÊÁÏÏÔÊ¾£¬»ÆÐÄÇ¿´Ó2006Äê12ÔÂÆð£¬ÏÈºóµ£ÈÎÃ¯ÃûÊÐ¸±ÊÐ³¤¡¢Ã¯ÃûÊÐÎ¯³£Î¯¡¢Í³Õ½²¿²¿³¤¡¢ÊÐÕþ¸®µ³×é¸±Êé¼ÇµÈÖ°£¬2016Äê6ÔÂÆð£¬ÈÎÃ¯ÃûÊÐÕþÐ­Ö÷Ï¯¡¢µ³×éÊé¼Ç¡£</p>
-<p>2010Äê5ÔÂ£¬°üÀ¨Ê±ÈÎÃ¯ÃûÊÐ¸±ÊÐ³¤»ÆÐÄÇ¿ÔÚÄÚµÄ8ÃûÃ¯Ãû¹ÙÔ±£¬ÒòÎªÍÏ½¨¡°ÌìÏÂµÚÒ»ÀÃ¡±Ê¡µÀ¶ø±»´¦·Ö¡£</p>
-<p>¾Ý±¨µ¼£¬¸ÃÌõÊ¡µÀÊÇÃ¯ÃûÊ¡µÀ281ÏßÆßÄÇ¶Î£¬´Ó1997ÄêÁ¢Ïîµ½2010ÄêÕûÕû13Äê£¬Àú¾­3´Î¿ª¹¤¼ô²Ê£¬ÈÔÎ´¶¯¹¤½¨Éè£¬¶øÐÞ½¨ÓÚ1970ÄêµÄÁ¤ÇàÂ·ÃæÖð½¥ÀÏ»¯£¬±»ÍøÓÑºÍµ±µØ¾ÓÃñ³ÆÎª¡°ÌìÏÂµÚÒ»ÀÃ¡±¡£</p>
-<p>´ËÍâ£¬»ÆÐÄÇ¿Òò»ý¼«×·ËæÖÐ¹²½­ÔóÃñ¼¯ÍÅÆÈº¦·¨ÂÖ¹¦£¬±»º£ÍâÃ÷»ÛÍøµãÃû¡£#</p>
-<p>ÔðÈÎ±à¼­£ºÐíÃÎ¶ù</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´06æœˆ24æ—¥è®¯ã€‘æ—¥å‰ï¼Œå¹¿ä¸œèŒ‚åå¸‚æ”¿åä¸»å¸­ã€å…šç»„ä¹¦è®°<ahref="https://github.com/dsc2569/djy/blob/master/gb/tag/%E9%BB%84%E5%BF%83%E5%BC%BA.md#1">é»„å¿ƒå¼º</a>ï¼ˆ60å²ï¼‰æººæ°´èº«äº¡ã€‚</p>
+<p>6æœˆ21æ—¥ä¸Šåˆ7æ—¶30åˆ†ï¼Œä¸€å…·ç”·æ€§å°¸ä½“åœ¨æ¹›æ±Ÿèµ¤åŽæµ·è¾¹è¢«å‘çŽ°ã€‚å½“åœ°å®˜æ–¹è¯å®žæ­»è€…æ˜¯<ahref="https://github.com/dsc2569/djy/blob/master/gb/tag/%E9%BB%84%E5%BF%83%E5%BC%BA.md#1">é»„å¿ƒå¼º</a>ã€‚</p>
+<p>6æœˆ24æ—¥ï¼Œæ¹›æ±Ÿå¸‚æ”¿åºœç›¸å…³è´Ÿè´£äººå¯¹çº¢æ˜Ÿæ–°é—»è¡¨ç¤ºï¼Œç›®å‰ï¼Œè­¦æ–¹æ­£åœ¨å¯¹é»„å¿ƒå¼ºæ­»äº¡ä¸€äº‹ä½œè¿›ä¸€æ­¥è°ƒæŸ¥ï¼Œâ€œä¸‹ä¸€æ­¥è¿˜è¦è¿›è¡Œå°¸æ£€ä¹‹ç±»çš„ï¼Œæ˜¯å¦ç³»è‡ªæ€ï¼Œç›®å‰ç»“è®ºè¿˜æ²¡æœ‰å®Œå…¨å‡ºæ¥ã€‚â€</p>
+<p>èŒ‚åå¸‚æ”¿åç›¸å…³è´Ÿè´£äººäº¦ç§°ï¼Œé»„å¿ƒå¼ºçš„æººäº¡æ˜¯å¦å±žè‡ªæ€ï¼Œç›®å‰ä»æœªå®šæ€§ï¼Œæ— æ³•ä½œå‡ºå›žç­”ã€‚</p>
+<p>è¿‘å¹´æ¥ï¼Œ<ahref="https://github.com/dsc2569/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%98%E5%91%98.md#1">ä¸­å…±å®˜å‘˜</a>â€œ<ahref="https://github.com/dsc2569/djy/blob/master/gb/tag/%E9%9D%9E%E6%AD%A3%E5%B8%B8%E6%AD%BB%E4%BA%A1.md#1">éžæ­£å¸¸æ­»äº¡</a>â€çš„çŽ°è±¡é¢‘è¢«æ›å…‰ï¼Œä»–ä»¬è‡ªæ€çš„æ–¹å¼ä¹Ÿå¤šç§å¤šæ ·ï¼šè·³æ¥¼ã€å‰²è…•ã€ä¸ŠåŠã€æººæ°´ã€æœæ¯’ï¼Œå§è½¨ã€å¼€æžªâ€¦â€¦ç­‰ã€‚</p>
+<p>å…¬å¼€èµ„æ–™æ˜¾ç¤ºï¼Œé»„å¿ƒå¼ºä»Ž2006å¹´12æœˆèµ·ï¼Œå…ˆåŽæ‹…ä»»èŒ‚åå¸‚å‰¯å¸‚é•¿ã€èŒ‚åå¸‚å§”å¸¸å§”ã€ç»Ÿæˆ˜éƒ¨éƒ¨é•¿ã€å¸‚æ”¿åºœå…šç»„å‰¯ä¹¦è®°ç­‰èŒï¼Œ2016å¹´6æœˆèµ·ï¼Œä»»èŒ‚åå¸‚æ”¿åä¸»å¸­ã€å…šç»„ä¹¦è®°ã€‚</p>
+<p>2010å¹´5æœˆï¼ŒåŒ…æ‹¬æ—¶ä»»èŒ‚åå¸‚å‰¯å¸‚é•¿é»„å¿ƒå¼ºåœ¨å†…çš„8åèŒ‚åå®˜å‘˜ï¼Œå› ä¸ºæ‹–å»ºâ€œå¤©ä¸‹ç¬¬ä¸€çƒ‚â€çœé“è€Œè¢«å¤„åˆ†ã€‚</p>
+<p>æ®æŠ¥å¯¼ï¼Œè¯¥æ¡çœé“æ˜¯èŒ‚åçœé“281çº¿ä¸ƒé‚£æ®µï¼Œä»Ž1997å¹´ç«‹é¡¹åˆ°2010å¹´æ•´æ•´13å¹´ï¼ŒåŽ†ç»3æ¬¡å¼€å·¥å‰ªå½©ï¼Œä»æœªåŠ¨å·¥å»ºè®¾ï¼Œè€Œä¿®å»ºäºŽ1970å¹´çš„æ²¥é’è·¯é¢é€æ¸è€åŒ–ï¼Œè¢«ç½‘å‹å’Œå½“åœ°å±…æ°‘ç§°ä¸ºâ€œå¤©ä¸‹ç¬¬ä¸€çƒ‚â€ã€‚</p>
+<p>æ­¤å¤–ï¼Œé»„å¿ƒå¼ºå› ç§¯æžè¿½éšä¸­å…±æ±Ÿæ³½æ°‘é›†å›¢è¿«å®³æ³•è½®åŠŸï¼Œè¢«æµ·å¤–æ˜Žæ…§ç½‘ç‚¹åã€‚#</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šè®¸æ¢¦å„¿</p>
 <p>&nbsp;</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/6/24/n11342282.htm">¹ã¶«Ã¯ÃûÕþÐ­Ö÷Ï¯»ÆÐÄÇ¿ÄçÍö ËÀÒò´ýÈ·¶¨</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275671.htm">ÖÐ¹²¹«°²ÃÜ¼¯×ÔÉ± ¸ö±ðÊÖ¶Î²ÐÈÌÒý²Â²â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11272664.htm">ºþÄÏ¹«°²ÏµÍ³¹ÙÔ±×ÔÉ± Â½Ã½ÅûÂ¶ÆäËÀÍöÏ¸½Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/7/n11240888.htm">ËÄ´¨ÚöáÁÅ®Ðû´«²¿³¤´«×ÔÉ± Ô­Òò²»Ã÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/10/n11175211.htm">É½¶«ÁÄ³ÇÜÝÆ½ÏØÎ¯Êé¼ÇÔÚ¼Ò×ÔÉ±ÉíÍö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/11/14/n10851600.htm">Ê®°Ë´óÒÔÀ´ ×ÔÉ±µÄÊý°ÙÖÐ¹²¹ÙÔ± Ãûµ¥Ò»ÀÀ</a></li>
-> <li><a href="https://github.com/dfh2/djy/blob/master/gb/18/11/14/n10851600.md">Ê®°Ë´óÒÔÀ´ ×ÔÉ±µÄÊý°ÙÖÐ¹²¹ÙÔ± Ãûµ¥Ò»ÀÀ</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/6/22/n11339838.htm">¡¾Ö±²¥¡¿¾Ü¾øºìÉ«Ã½Ìå 623¿­µÀ¼¯»á</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/23/n11340646.htm">¡¾·­Ç½±Ø¿´¡¿¹ã¶«±¬·¢´ó¹æÄ£ÈºÌåÎ¬È¨ÊÂ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/23/n11341325.htm">»îÕªÆ÷¹ÙÄÑÖÃÐÅ£¿ ÓöÂÞÎÄ£º¸ç¸çÑÛ½ÇÄ¤±»Õª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/23/n11341140.htm">¹Ý³¤¶ÔÍúÖÐ²Ì¶­º°»° ¸»¿ÉµÐ¹ú²»±£ÎÀ¹ú¼Ò£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/8/n11171684.htm">¡¾ÏÍºó´«¡¿Ê·ÉÏÃüÔË×îÀëÆæµÄÒ»Î»»Êºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/7/n11307310.htm">ÃüÖÐÓÐ²ÆÓëÎÞ²Æ£¨ÖÐ£©£ºÕæÄÜËã³öÀ´£¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/5/19/n4437697.htm">È¨ºâÇáÖØ ¹Å´úÊ®ÁùÁ½Ò»½ï´óÓÐÑ§ÎÊ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/15/n11324574.htm">¡¾ÖÐ»ªÉÌµÀ¡¿ÒÔÐÅÒå¾­ÉÌÖÎ¼ÒµÄ½úÉÌÇÇÖÂÓ¹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/22/n11340267.htm">¸ÛÈË·´ËÍÖÐÖ®¼Ê ¹ã¶«½ÓÁ¬±¬·¢Á½Æð´óÓÎÐÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11338786.htm">·ÖÎö£º´¨ÆÕ²»¶ÔÒÁÀÊ¶¯Îä¼´¿ÉÈ¡Ê¤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/22/n11340314.htm">ºþÄÏ²Ù³¡ÂñÊ¬°¸ ÑÚ¸Ç16Äêºó±³ºóÊÆÁ¦¸¡ÏÖ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11339016.htm">¡¾ÐÂÎÅ¿´µã¡¿Ñ§ÉúÔÙÎ§¸Û¸® ÁÖÖ£Î£»úÓÐ¶àÉî£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11331197.htm">¡¾ÐÂÎÅ¿´µã¡¿G20´¨Ï°»áÇÃ¶¨ Ï°·Ã³¯±³ºóÐþ»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11330846.htm">¡¾ÐÂÎÅ¿´µã¡¿ÁÖÖ£ºóÍË±±¾©´ì°Ü ·´ËÍÖÐ¸Õ¿ªÊ¼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11338566.htm">¡¶¹ÂÐÇÀá¡·ÃûÇú±ä·´ËÍÖÐ¸è ´Ê×÷ÕßÔÞ¸ÛÈËÓÂ¸Ò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11339067.htm">³ÂÇÇ¶÷ÊÕÄäÃû»­×÷ ³ÂåûÏ£3¸öÔÂºó³ÐÈÏÍüÊðÃû</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11339076.htm">ÕÔÓÖÍ¢¸ßÔ²Ô²Å®¶ùÂúÔÂ ÆØ¹âµÄÓ¢ÎÄÃûÒâº­³¬Å¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/23/n11341454.htm">ÑÝ³ª»áÉùÔ®·´ËÍÖÐ ÂÞ´óÓÓ¸èÇúÔâÖÐ¹²·âÉ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11338547.htm">ÕÉ·ò¾Û»á´øÆÞÅã ÀµÁÕ¶÷ÐÅÈÎ»éÒö</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/18/11/14/n10851600.md#1">åå…«å¤§ä»¥æ¥ è‡ªæ€çš„æ•°ç™¾ä¸­å…±å®˜å‘˜ åå•ä¸€è§ˆ</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/19/4/10/n11175211.md#1">å±±ä¸œèŠåŸŽèŒŒå¹³åŽ¿å§”ä¹¦è®°åœ¨å®¶è‡ªæ€èº«äº¡</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/19/5/7/n11240888.md#1">å››å·é‚›å´ƒå¥³å®£ä¼ éƒ¨é•¿ä¼ è‡ªæ€ åŽŸå› ä¸æ˜Ž</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/19/5/22/n11272664.md#1">æ¹–å—å…¬å®‰ç³»ç»Ÿå®˜å‘˜è‡ªæ€ é™†åª’æŠ«éœ²å…¶æ­»äº¡ç»†èŠ‚</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/dfh2/djy/blob/master/gb/19/6/24/n11342282.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/dfh2/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/dfh2/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/dfh2/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10705738.md#1" target="_blank">å¤çŽ‰æ–‡ï¼šçº¢è°éƒ­æ±ç‘°ä¸å¿˜åˆå¿ƒ åŠ©å…±ä¸ºè™é£Ÿè‹¦æžœ</a></li><li><a href="https://github.com/dsc2569/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">ä¸­å…±çš„ä¼ªç«éª—å±€</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/5/n11501516.md#1" target="_blank">æ¬§æ´²åƒäººæ³•ä¼š è¥¿æ–¹æ³•è½®åŠŸå­¦å‘˜è°ˆä¿®ç‚¼æ„Ÿæ‚Ÿ</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12110809.md#1">ã€åå­—è·¯å£ã€‘ç¾Žä¸­è¦å…¨é¢è„±é’© ä¸­å›½äº”å¤§ç»æµŽè­¦è®¯</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12112087.md#1">è‡´æ•¬æŽæ´ªå¿—å…ˆç”Ÿ ç¾Žè®®å‘˜æŽˆäºˆ513å›½ä¼šå±±å›½æ——</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113099.md#1">å·æ™®ç§°å¯åˆ‡æ–­â€œç¾Žä¸­å…³ç³»â€ èµµç«‹åšè½¯åŒ–å›žåº”</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12112161.md#1">å››å·å…¬æ°‘è½¬ä¼ ä¸€å¼ å›¾ç‰‡ å¼•æ¥å›½ä¿äºŒæ¬¡ä¸Šé—¨</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/2/22/n11886913.md#1">ã€æ€æƒ³é¢†è¢–ã€‘ä¸­å…±ä¸ºä½•å¿µå¿µä¸å¿˜å¾æœå°æ¹¾ï¼Ÿ</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12115144.md#1">å¯¹å°æ¹¾èµžä¸ç»å£ é»„ç§‹ç”Ÿï¼šæˆ‘çš„å…„å¼Ÿä¹Ÿè¦ç§»æ°‘äº†</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12110814.md#1">IUåŠä¸ªæœˆä¸‰åº¦ææ¬¾åŠ©äºº ç”Ÿæ—¥å‰å¤•çŸ­å‘å—å…³æ³¨</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12114166.md#1">å´”æ™ºå‹æœ¬æ—¥è¿Žæ¥å¥³å„¿å‡ºç”Ÿ æ¯å¥³å‡å®‰</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113316.md#1">åŠç™¾å¹´çºªåå¤©ç»ƒå‡ºè…¹è‚Œ æŽè‹¥å½¤åˆ†äº«å†»é¾„æœ¯</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12114576.md#1">ä¸»æŒé‡é™©æƒŠé­‚ å¼ å‡¤ä¹¦é•¿è¾¾10å¹´æ²¡æŽ¥å¤–æ™¯</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/13/7/18/n3919814.md#1">ç±³å¼€æœ—åŸºç½—ï¼ˆ8ï¼‰ã€Šåˆ›ä¸–çºªã€‹ï¼ˆä¸‹ï¼‰</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12110895.md#1">å¥³å­æ¿’æ­»è§ä¸Šå¸å’Œè€¶ç¨£ æ³æ±‚è¿˜é˜³ç»ˆèŽ·é‡ç”Ÿ</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/4/25/n12061244.md#1">è´¾å®çŽ‰å’Œè–›å®é’—çš„é‡‘çŽ‰ä¹‹ç¼˜</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/4/13/n12026603.md#1">ã€å‘½ç†ã€‘çš‡å¸å‘½æ˜¯æ€Žæ ·æ¥çš„ï¼Ÿ</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/12/n12103093.md#1">æ²‰æººäºŽé…’ä¹¡å¿˜å´å¤©å‘½ é©¬å‘¨å—ç‚¹åŒ–ç»ˆæˆè‚¡è‚±ä¹‹è‡£</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/dsc2569/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/dsc2569/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/6/24/n11342282.htm">å¹¿ä¸œèŒ‚åæ”¿åä¸»å¸­é»„å¿ƒå¼ºæººäº¡ æ­»å› å¾…ç¡®å®š</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dsc2569/djy/blob/master/gb/19/6/24/n11342282.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/dsc2569/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/dsc2569/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/dsc2569/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
